# pocket_mcts

./: .gitignore  CMakeLists.txt  README.md  pocket_mcts.h
examples/: connect4.cc  oxo.cc
